--- a/GAtec.Seletivo.Business/GAtec.Seletivo.Business.csproj
+++ b/GAtec.Seletivo.Business/GAtec.Seletivo.Business.csproj
@@ -48,5 +48,15 @@
   <ItemGroup>
     <None Include="App.config" />
   </ItemGroup>
+  <ItemGroup>
+    <ProjectReference Include="..\GAtec.Seletivo.Domain\GAtec.Seletivo.Domain.csproj">
+      <Project>{d6e63cba-8f9d-476b-8d38-ae610f5411e5}</Project>
+      <Name>GAtec.Seletivo.Domain</Name>
+    </ProjectReference>
+    <ProjectReference Include="..\GAtec.Seletivo.Util\GAtec.Seletivo.Util.csproj">
+      <Project>{a2aa20cf-1a0d-4651-b011-9b67d3b479f2}</Project>
+      <Name>GAtec.Seletivo.Util</Name>
+    </ProjectReference>
+  </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
 </Project>
