--- a/GAtec.Seletivo.Util/GAtec.Seletivo.Util.csproj
+++ b/GAtec.Seletivo.Util/GAtec.Seletivo.Util.csproj
@@ -33,6 +33,7 @@
   </PropertyGroup>
   <ItemGroup>
     <Reference Include="System" />
+    <Reference Include="System.ComponentModel.DataAnnotations" />
     <Reference Include="System.Core" />
     <Reference Include="System.Xml.Linq" />
     <Reference Include="System.Data.DataSetExtensions" />
@@ -42,8 +43,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Validation\DefaultValidation.cs" />
+    <Compile Include="Validation\IValidationError.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
