--- a/GAtec.Seletivo.Domain/GAtec.Seletivo.Domain.csproj
+++ b/GAtec.Seletivo.Domain/GAtec.Seletivo.Domain.csproj
@@ -48,6 +48,7 @@
     <Compile Include="Model\Question.cs" />
     <Compile Include="Model\Recruitment.cs" />
     <Compile Include="Model\User.cs" />
+    <Compile Include="Model\UserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Repository\IBaseRepository.cs" />
   </ItemGroup>
