--- a/GAtec.Seletivo.Domain/GAtec.Seletivo.Domain.csproj
+++ b/GAtec.Seletivo.Domain/GAtec.Seletivo.Domain.csproj
@@ -50,7 +50,12 @@
     <Compile Include="Model\User.cs" />
     <Compile Include="Model\UserType.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Repository\IAnswerRepository.cs" />
     <Compile Include="Repository\IBaseRepository.cs" />
+    <Compile Include="Repository\IExamRepository.cs" />
+    <Compile Include="Repository\IQuestionRepository.cs" />
+    <Compile Include="Repository\IRecruitmentRepository.cs" />
+    <Compile Include="Repository\IUserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <None Include="App.config" />
