--- a/GAtec.Seletivo.Data/GAtec.Seletivo.Data.csproj
+++ b/GAtec.Seletivo.Data/GAtec.Seletivo.Data.csproj
@@ -43,9 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
+    <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GAtec.Seletivo.Domain\GAtec.Seletivo.Domain.csproj">
