--- a/GAtec.Seletivo.Web/Web.config
+++ b/GAtec.Seletivo.Web/Web.config
@@ -10,6 +10,9 @@
     <add key="ClientValidationEnabled" value="true" />
     <add key="UnobtrusiveJavaScriptEnabled" value="true" />
   </appSettings>
+  <connectionStrings>
+    <add name="Seletivo" connectionString="Server=.\SQLEXPRESS;Database=GA_SELETIVO;User Id=sa;Password=sagatec;" providerName="System.Data.SqlClient" />
+  </connectionStrings>
   <system.web>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
