--- a/GAtec.Seletivo.Data/GAtec.Seletivo.Data.csproj
+++ b/GAtec.Seletivo.Data/GAtec.Seletivo.Data.csproj
@@ -43,6 +43,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="RecruitmentRepository.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
   <ItemGroup>
