--- a/GAtec.Seletivo.Data/GAtec.Seletivo.Data.csproj
+++ b/GAtec.Seletivo.Data/GAtec.Seletivo.Data.csproj
@@ -45,7 +45,10 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="AnswerRepository.cs" />
+    <Compile Include="ExamRepository.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionRepository.cs" />
     <Compile Include="RecruitmentRepository.cs" />
     <Compile Include="UserRepository.cs" />
   </ItemGroup>
