add service for user

--- a/GAtec.Seletivo.Business/GAtec.Seletivo.Business.csproj
+++ b/GAtec.Seletivo.Business/GAtec.Seletivo.Business.csproj
@@ -46,9 +46,7 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="Properties\AssemblyInfo.cs" />
-  </ItemGroup>
-  <ItemGroup>
-    <None Include="App.config" />
+    <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
     <ProjectReference Include="..\GAtec.Seletivo.Domain\GAtec.Seletivo.Domain.csproj">
