--- a/GAtec.Seletivo.Web/Web.config
+++ b/GAtec.Seletivo.Web/Web.config
@@ -14,6 +14,11 @@
     <add name="Seletivo" connectionString="Server=.\SQLEXPRESS;Database=GA_SELETIVO;User Id=sa;Password=sagatec;" providerName="System.Data.SqlClient" />
   </connectionStrings>
   <system.web>
+    <authentication mode="Forms">
+      <forms loginUrl="~/Login/Index" timeout="180"
+             slidingExpiration="false"
+             name=".ASPXAUTHPRJ7_GatecSeletivo" />
+    </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
     <httpModules>
