--- a/GAtec.Seletivo.Business/GAtec.Seletivo.Business.csproj
+++ b/GAtec.Seletivo.Business/GAtec.Seletivo.Business.csproj
@@ -45,6 +45,7 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="ExamService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
