--- a/GAtec.Seletivo.Web/Web.config
+++ b/GAtec.Seletivo.Web/Web.config
@@ -15,9 +15,7 @@
   </connectionStrings>
   <system.web>
     <authentication mode="Forms">
-      <forms loginUrl="~/Login/Index" timeout="180"
-             slidingExpiration="false"
-             name=".ASPXAUTHPRJ7_GatecSeletivo" />
+      <forms loginUrl="~/Login/Index" timeout="180" slidingExpiration="false" name=".ASPXAUTHPRJ7_GatecSeletivo" />
     </authentication>
     <compilation debug="true" targetFramework="4.6.1" />
     <httpRuntime targetFramework="4.6.1" />
