--- a/GAtec.Seletivo.Web/packages.config
+++ b/GAtec.Seletivo.Web/packages.config
@@ -23,5 +23,6 @@
   <package id="Newtonsoft.Json" version="6.0.4" targetFramework="net461" />
   <package id="popper.js" version="1.12.9" targetFramework="net461" />
   <package id="Respond" version="1.2.0" targetFramework="net461" />
+  <package id="Unity" version="5.7.3" targetFramework="net461" />
   <package id="WebGrease" version="1.5.2" targetFramework="net461" />
 </packages>
