--- a/GAtec.Seletivo.Web/GAtec.Seletivo.Web.csproj
+++ b/GAtec.Seletivo.Web/GAtec.Seletivo.Web.csproj
@@ -289,6 +289,7 @@
     <Content Include="Scripts\popper-utils.min.js.map" />
     <Content Include="Scripts\popper-utils.js.map" />
     <Content Include="Views\Exam\Details.cshtml" />
+    <Content Include="Views\Exam\Teste.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
