--- a/GAtec.Seletivo.Business/GAtec.Seletivo.Business.csproj
+++ b/GAtec.Seletivo.Business/GAtec.Seletivo.Business.csproj
@@ -47,6 +47,7 @@
   <ItemGroup>
     <Compile Include="ExamService.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="QuestionService.cs" />
     <Compile Include="UserService.cs" />
   </ItemGroup>
   <ItemGroup>
