--- a/GAtec.Seletivo.Web/GAtec.Seletivo.Web.csproj
+++ b/GAtec.Seletivo.Web/GAtec.Seletivo.Web.csproj
@@ -184,6 +184,7 @@
     <Compile Include="Libs\UnityDependencyResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="ViewModel\QuestionAnswerViewModel.cs" />
+    <Compile Include="ViewModel\RecruitExamViewModel.cs" />
   </ItemGroup>
   <ItemGroup>
     <Content Include="Content\bootstrap-grid.css" />
