add question exam link

--- a/GAtec.Seletivo.Web/GAtec.Seletivo.Web.csproj
+++ b/GAtec.Seletivo.Web/GAtec.Seletivo.Web.csproj
@@ -183,6 +183,7 @@
     </Compile>
     <Compile Include="Libs\UnityDependencyResolver.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="ViewModel\ExamQuestionViewModel.cs" />
     <Compile Include="ViewModel\QuestionAnswerViewModel.cs" />
     <Compile Include="ViewModel\RecruitExamViewModel.cs" />
   </ItemGroup>
@@ -306,6 +307,7 @@
     <Content Include="Views\Recruitment\Teste.cshtml" />
     <Content Include="Views\Answer\Index.cshtml" />
     <Content Include="Views\Answer\Details.cshtml" />
+    <Content Include="Views\Question\Details.cshtml" />
   </ItemGroup>
   <ItemGroup>
     <Folder Include="App_Data\" />
